<resources>
    <string name="app_name">BabbelWordGame</string>

    <string name="introduction_label">Introduction</string>
    <string name="gamescreen_label">Word Tumbler</string>
    <string name="results_label">Results</string>

    <string name="introduction_header">Word Tumbler</string>
    <string name="introduction_body">Welcome to word tumbler. \n \n In this game, a word or phrase is given, after which a possible translation falls down on the screen. Push the left button if you think the translation is correct, push right if you think if it is wrong. \n \n After 7 words, you will see the results of your series.</string>
    <string name="startbutton">Start the game</string>

    <string name="rightbutton">Right</string>
    <string name="wrongbutton">Wrong</string>

    <string name="coloriginal">Word</string>
    <string name="colgiven">Given translation</string>
    <string name="colcorrect">Correct translation</string>
    <string name="colanswer">Given answer</string>
</resources>