<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FragmentIntroduction">

    <fragment
        android:id="@+id/FragmentIntroduction"
        android:name="com.example.babbelwordgame.Introduction"
        android:label="@string/introduction_label"
        tools:layout="@layout/introduction">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/FragmentGameScreen" />
    </fragment>

    <fragment
        android:id="@+id/FragmentGameScreen"
        android:name="com.example.babbelwordgame.GameScreen"
        android:label="@string/gamescreen_label"
        tools:layout="@layout/gamescreen">
        <action
            android:id="@+id/action_GameScreen_to_Results"
            app:destination="@id/FragmentResults" />

    </fragment>

    <fragment
        android:id="@+id/FragmentResults"
        android:name="com.example.babbelwordgame.Results"
        android:label="@string/results_label"
        tools:layout="@layout/result_screen">

    </fragment>

</navigation>