<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreen"
    >

    <Button
        android:id="@+id/startgamebutton"
        android:layout_width="123dp"
        android:layout_height="68dp"
        android:text="@string/startbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fall_field" />

    <Button
        android:id="@+id/wrongbutton"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginEnd="32dp"
        android:text="@string/wrongbutton"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fall_field"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/rightbutton"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginStart="32dp"
        android:text="@string/rightbutton"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fall_field"
        app:layout_constraintVertical_bias="0.589" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fall_field"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toTranslate"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/timerBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:indeterminateOnly="false"
            android:max="2000"
            android:progress="0"
            android:progressDrawable="@drawable/progress_bar_timer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toTranslate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toTranslate"
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="#F1660A"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fall_field"
        android:layout_width="414dp"
        android:layout_height="440dp"
        android:background="#FBF2A1"
        android:maxHeight="440dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

        <LinearLayout
            android:id="@+id/dangerZone"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:background="#DA3D3D"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </LinearLayout>

        <TextView
            android:id="@+id/falling_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6B522"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>